# coalesced_intervals

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: to_vector_validation.rs
src/: .lib.rs.swp  lib.rs
tests/: readme_tests.rs
