[package]
name = "coalesced_intervals"
version = "0.1.6"
edition = "2021"
exclude = [
    ".github",
    ".gitignore",
]
license = "Apache-2.0"
description = "Data structure for maintaining maximally-coalesced 1D intervals."

[dependencies]
log = "~0.4"

[dev-dependencies]
env_logger = "~0.11"
docmatic = "0.1.2"
